--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,4 @@ VITE_APP_ENV=production
 VITE_API_URL=https://api.roketx.de
 VITE_EMAIL_SERVICE=https://formsubmit.co/el/secure/info@roketx.de
 VITE_GOOGLE_ANALYTICS_ID=G-Q1RH9QSYP0
-VITE_CALENDLY_URL=https://calendly.com/your-prod-url
+VITE_CALENDLY_URL=https://calendly.com/hasanyilmaz1811/roketx
