--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "test:ui": "vitest --ui",
-    "start": "node server.js"
+    "start": "node server.js",
+    "deploy": "npm run build && node server.js"
   },
   "dependencies": {
     "@react-spring/three": "^9.7.5",
