--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.2",
     "lucide-react": "^0.471.1",
+    "mime-types": "^2.1.35",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
