--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:fix": "node build-and-fix.js",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "test:ui": "vitest --ui",
-    "start": "node server.js",
-    "deploy": "npm run build && node server.js"
+    "start": "NODE_ENV=production node server.js",
+    "deploy": "npm run build:fix && NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@react-spring/three": "^9.7.5",
