--- a/.htaccess
+++ b/.htaccess
@@ -1,39 +1,60 @@
-# Setzt den richtigen MIME-Typ für JavaScript-Dateien
-AddType application/javascript .js
-AddType application/javascript .jsx
-AddType application/javascript .mjs
+# Diese Datei bietet Anweisungen für den Webserver, wie bestimmte Dateitypen zu behandeln sind
+# Wird vom Node.js-Hosting in a2fbe.webhosting.systems verwendet
 
-# Aktiviere CORS
-<IfModule mod_headers.c>
-  Header set Access-Control-Allow-Origin "*"
+# JavaScript-Dateien korrekt behandeln
+<FilesMatch "\.(js|jsx|mjs)$">
+    ForceType application/javascript
+    Header set Content-Type "application/javascript; charset=utf-8"
+    Header set X-Content-Type-Options "nosniff"
+</FilesMatch>
+
+# Alle anderen statischen Assets korrekt behandeln
+<FilesMatch "\.(css)$">
+    ForceType text/css
+    Header set Content-Type "text/css; charset=utf-8"
+</FilesMatch>
+
+<FilesMatch "\.(html|htm)$">
+    ForceType text/html
+    Header set Content-Type "text/html; charset=utf-8"
+</FilesMatch>
+
+<FilesMatch "\.(json)$">
+    ForceType application/json
+    Header set Content-Type "application/json; charset=utf-8"
+</FilesMatch>
+
+# Fallback für SPA-Routing - Leite alle 404-Anfragen an index.html weiter
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    
+    # Wenn der angeforderte Pfad nicht auf eine tatsächliche Datei oder ein Verzeichnis verweist
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    
+    # Dann leite an die index.html weiter
+    RewriteRule ^(.*)$ /index.html [L]
 </IfModule>
 
-# Deaktiviere Caching für häufige Entwicklungsdateien
-<FilesMatch "\.(js|jsx|css|html|json)$">
-  FileETag None
-  <IfModule mod_headers.c>
-    Header unset ETag
-    Header set Cache-Control "max-age=0, no-cache, no-store, must-revalidate"
-    Header set Pragma "no-cache"
-    Header set Expires "Wed, 11 Jan 1984 05:00:00 GMT"
-  </IfModule>
-</FilesMatch>
+# CORS-Header für Cross-Origin-Ressourcen setzen
+<IfModule mod_headers.c>
+    Header set Access-Control-Allow-Origin "*"
+    Header set Access-Control-Allow-Methods "GET, POST, OPTIONS"
+    Header set Access-Control-Allow-Headers "Content-Type, Authorization"
+</IfModule>
 
 # Kompression aktivieren
 <IfModule mod_deflate.c>
-  AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css application/javascript application/json
+    AddOutputFilterByType DEFLATE text/html text/plain text/css application/javascript application/json
 </IfModule>
 
-# Node.js-Server über Proxy-Weiterleitung
-<IfModule mod_rewrite.c>
-  RewriteEngine On
-  
-  # Wenn es sich um eine JavaScript-Datei handelt, setze explizit den MIME-Typ
-  RewriteRule \.js$ - [T=application/javascript]
-  RewriteRule \.jsx$ - [T=application/javascript]
-  
-  # Alle Anfragen an die Node.js-Anwendung weiterleiten
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule ^(.*)$ / [L,QSA]
-</IfModule>
+# Caching-Direktiven - für Entwicklung deaktivieren, für Produktion aktivieren
+<FilesMatch "\.(html|htm|js|jsx|css|json)$">
+    # Für Entwicklung: Kein Caching
+    Header set Cache-Control "no-store, no-cache, must-revalidate, max-age=0"
+    Header set Pragma "no-cache"
+    Header set Expires "0"
+    
+    # Für Produktion: Kommentieren Sie die obigen Zeilen aus und aktivieren Sie diese:
+    # Header set Cache-Control "public, max-age=31536000, immutable"
+</FilesMatch>
